[tool.poetry]
name = "sample-csv"
version = "1.0.0"
description = ""
authors = ["simonpfish <simonpfish@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_csv"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
typer = "^0.9.0"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"sample-csv" = "sample_csv.main:app"